[package]
name = "czttgd-dao"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.25"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.120"
clap = { version = "4.5.9", features = ["derive"] }
tokio = { version = "1.38.1", features = ["rt-multi-thread"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql"] }
axum = { version = "0.7.5", features = ["query", "macros"] }
fern = "0.6.2"
log = "0.4.22"
humantime = "2.1.0"
anyhow = "1.0.86"
once_cell = "1.19.0"
paste = "1.0.15"